update see change
update see change

--- a/_posts/2013-10-21-a_poetry.html
+++ b/_posts/2013-10-21-a_poetry.html
@@ -1,8 +1,8 @@
 ---
 layout: post
-category : test
+category : 吐槽
 tagline: "Supporting tagline"
-tags : [test]
+tags : [吐槽]
 title: 人之初~
 ---
 {% include JB/setup %}
